[FIX] web: new kanban: footer should wrap elements
Before this commit, when the footer had many items, those were not wrapped
so, the overflew under the next card.

After this commit, elements inside the footer are wrapped, and they overflow on a next line.

task-4609581

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -200,8 +200,9 @@
 
         > footer, > main > footer {
             display: flex;
+            flex-wrap: wrap;
             align-items: center;
-            column-gap: var(--Card-Footer-gap, #{map-get($spacers, 2)});
+            gap: var(--Card-Footer-gap, #{map-get($spacers, 2)});
             margin-top: auto;
             padding-top: var(--KanbanRecord-padding-v);
             font-size: var(--Card-Footer-font-size, .875rem);
